--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "format": "prettier --write .",
         "test-all": "npm run format && npm run check-format && npm run check-lint && npm run check-types && npm run build",
         "prepare": "husky install",
-        "postinstall": "prisma generate"
+        "postbuild": "next-sitemap"
     },
     "dependencies": {
         "@headlessui/react": "^1.7.14",
@@ -35,10 +35,12 @@
         "firebase": "^10.4.0",
         "framer-motion": "^10.12.16",
         "gray-matter": "^4.0.3",
+        "highlight.js": "^11.8.0",
         "lottie-react": "^2.4.0",
         "next": "13.4.2",
         "next-mdx-remote": "^4.4.1",
         "next-seo": "^6.0.0",
+        "next-sitemap": "^4.2.3",
         "nodemailer": "^6.9.2",
         "postcss": "8.4.23",
         "react": "^18.0.0",
@@ -47,7 +49,11 @@
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.8.0",
         "react-loading-skeleton": "^3.3.1",
+        "react-timeago": "^7.2.0",
         "react-tooltip": "^5.21.4",
+        "rehype-autolink-headings": "^7.0.0",
+        "rehype-highlight": "^7.0.0",
+        "rehype-slug": "^6.0.0",
         "tailwindcss": "3.3.2",
         "three": "^0.152.2",
         "typescript": "5.0.4",
@@ -58,6 +64,7 @@
         "@semantic-release/release-notes-generator": "^11.0.1",
         "@tailwindcss/typography": "^0.5.10",
         "@types/nodemailer": "^6.4.8",
+        "@types/react-timeago": "^4.1.4",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
         "clsx": "^1.2.1",
