--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "framer-motion": "^10.12.16",
         "gray-matter": "^4.0.3",
         "highlight.js": "^11.8.0",
+        "lodash": "^4.17.21",
         "lottie-react": "^2.4.0",
         "next": "13.4.2",
         "next-mdx-remote": "^4.4.1",
@@ -63,6 +64,7 @@
         "@hookform/resolvers": "^3.1.0",
         "@semantic-release/release-notes-generator": "^11.0.1",
         "@tailwindcss/typography": "^0.5.10",
+        "@types/lodash": "^4.14.199",
         "@types/nodemailer": "^6.4.8",
         "@types/react-timeago": "^4.1.4",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
