--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "axios": "^1.4.0",
         "class-variance-authority": "^0.7.0",
         "eslint-config-next": "13.4.2",
+        "extract-md-headings": "^0.2.5",
         "firebase": "^10.4.0",
         "framer-motion": "^10.12.16",
         "gray-matter": "^4.0.3",
@@ -40,8 +41,11 @@
         "lottie-react": "^2.4.0",
         "next": "13.4.2",
         "next-mdx-remote": "^4.4.1",
+        "next-progress": "^2.3.1",
         "next-seo": "^6.0.0",
         "next-sitemap": "^4.2.3",
+        "nextjs-progressbar": "^0.0.16",
+        "nextjs-toploader": "^1.4.2",
         "nodemailer": "^6.9.2",
         "postcss": "8.4.23",
         "react": "^18.0.0",
