--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "nextjs-toploader": "^1.4.2",
         "nodemailer": "^6.9.2",
         "postcss": "8.4.23",
+        "querystring": "^0.2.1",
         "react": "^18.0.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
@@ -56,6 +57,7 @@
         "rehype-autolink-headings": "^7.0.0",
         "rehype-highlight": "^7.0.0",
         "rehype-slug": "^6.0.0",
+        "swr": "^2.2.4",
         "tailwindcss": "3.3.2",
         "three": "^0.152.2",
         "typescript": "5.0.4",
