--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "zod": "^3.21.4"
     },
     "devDependencies": {
+        "@cloudflare/next-on-pages": "^1.7.2",
         "@hookform/resolvers": "^3.1.0",
         "@semantic-release/release-notes-generator": "^11.0.1",
         "@tailwindcss/typography": "^0.5.10",
