fix: update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,73 +1,29 @@
-name: 'Github Action'
+name: Deploy
 
+# Controls when the action will run. 
 on:
-    push:
-        branches:
-            - main
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ main ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v2
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-            - name: Install PM2
-              run: npm install -g pm2
-
-            - name: Install Dependencies
-              run: npm install
-
-            - name: Build Frontend App
-              run: npm run build
-
-            - name: Upload Artifact
-              uses: actions/upload-artifact@v2
-              with:
-                  name: artifact
-                  path: ./.next
-
-    deploy:
-        needs: build
-        runs-on: ubuntu-latest
-        steps:
-            - name: Download Artifact
-              uses: actions/download-artifact@v2
-              with:
-                  name: artifact
-                  path: ./.next
-            - name: Check Files
-              run: ls -la .
-
-            - name: Copy Build to Server via SSH
-              uses: appleboy/scp-action@v0.1.4
-              with:
-                  host: 103.127.98.204
-                  port: ${{ secrets.PORT }}
-                  username: ${{ secrets.USERNAME }}
-                  password: ${{ secrets.PASSWORD }}
-                  source: .next/
-                  target: /var/www/personal-website/
-    release:
-        needs: deploy
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
-            - name: Release the App
-              uses: appleboy/ssh-action@master
-              with:
-                  host: 103.127.98.204
-                  port: ${{ secrets.PORT }}
-                  username: ${{ secrets.USERNAME }}
-                  password: ${{ secrets.PASSWORD }}
-                  script: |
-                      cd /var/www/personal-website/
-                      git fetch
-                      git pull
-                      npm install
-                      pm2 restart BOF_FRONTEND
-
-            - name: Delete Artifact
-              uses: geekyeggo/delete-artifact@v2
-              with:
-                  name: artifact
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:       
+    - name: Deploy using ssh
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        script: |
+          cd /var/www/youtube.com/
+          git pull origin main
+          git status
+          npm install --only=prod
