fix: update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
-          cd /var/www/youtube.com/
+          cd /var/www/mnauff/
           git pull origin main
           git status
           npm install --only=prod
