--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,62 @@
-name: Deploy
+name: 'Deploy to VPS'
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
+    branches:
+      - master
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:       
-    - name: Deploy using ssh
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: 22
-        script: |
-          cd /var/www/mnauff/
-          git pull origin main
-          git status
-          npm install --only=prod
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Install PM2
+        run: npm install -g pm2
+
+      - name: Install Dependencies
+        run: npm install  # Changed from yarn install
+
+      - name: Build Frontend App
+        run: npm run build  # If you use a different npm script for building
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact
+          path: .next
+
+  release:
+    needs: deploy
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: .next
+
+      - name: Copy Build to Server via SCP
+        uses: wvanlit/scp-action@v1
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          source: .next/
+          target: /var/www/mnauff/
+
+      - name: SSH into Server and Restart PM2
+        uses: appleboy/ssh-action@v0.2.2
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            cd /var/www/mnauff
+            git fetch
+            git pull
+            npm install  # Change to npm for installing dependencies
+            pm2 restart BOF_FRONTEND
