--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,74 +1,51 @@
-name: '[FE REPO SYNC]'
+name: Auto Deploy Next.js
+
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v2
+  deploy:
+    runs-on: ubuntu-latest
 
-            - name: Install PM2
-              run: npm install -g pm2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-            - name: Install Dependencies
-              run: npm install
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.9.0
+    
+      - name: Install PM2
+        run: npm install -g pm2
 
-            - name: Build Frontend App
-              run: npm run build
+      - name: Install dependencies
+        run: npm install
 
-            - name: Upload Artifact
-              uses: actions/upload-artifact@v2
-              with:
-                  name: artifact
-                  path: ./.next
+      - name: Build Next.js
+        run: npm run build
 
-    deploy:
-        needs: build
-        runs-on: ubuntu-latest
-        steps:
-            - name: Download Artifact
-              uses: actions/download-artifact@v2
-              with:
-                  name: artifact
-                  path: ./.next
-            - name: Check Files
-              run: ls -la .
+      - name: Copy files to VPS
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: ./next
+          target: /var/www/mnauff
 
-            - name: Copy Build to Server via SSH
-              uses: appleboy/scp-action@v0.1.4
-              with:
-                  host: ${{ secrets.HOST }}
-                  port: ${{ secrets.PORT }}
-                  username: ${{ secrets.USERNAME }}
-                  password: ${{ secrets.PASSWORD }}
-                  source: .next/
-                  target: /var/www/mnauff/
+      - name: SSH into VPS and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /var/www/mnauff
+            git fetch
+            git pull
+            npm install
+            pm2 restart mnauff
 
-    release:
-        needs: deploy
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
-            - name: Release the App
-              uses: appleboy/ssh-action@master
-              with:
-                  host: ${{ secrets.HOST }}
-                  port: ${{ secrets.PORT }}
-                  username: ${{ secrets.USERNAME }}
-                  password: ${{ secrets.PASSWORD }}
-                  script: |
-                      cd /var/www/mnauff
-                      git fetch
-                      git pull
-                      npm install
-                      pm2 restart BOF_FRONTEND
-
-            - name: Delete Artifact
-              uses: geekyeggo/delete-artifact@v2
-              with:
-                  name: artifact
